--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
-title: WIT @ IC @ UFBA
+
+title: WIT @ IC-UFBA
 description: WIT - Mulheres na Tecnologia da Informação
 show_downloads: true
 theme: jekyll-theme-leap-day
+
 
