--- a/_config.yml
+++ b/_config.yml
@@ -15,13 +15,15 @@ remote_theme           : "mmistakes/minimal-mistakes"
 minimal_mistakes_skin  : "air" #, "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "en-US"
+#locale                   : "en-US"
+locale                   : "pt-BR"
 title                    : "IC-WIT"
-title_separator          : "-"
+title_separator          : "|"
 subtitle                 : "Mulheres na Computação - UFBA"
 name                     : "IC-WIT"
 description              : "Mulheres na Computação - UFBA."
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://wit-ic-ufba.github.io"
+# the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
