--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title_separator          : "|"
 subtitle                 : "Mulheres na Computação - UFBA"
 name                     : "IC-WIT"
 description              : "Mulheres na Computação - UFBA."
-url                      : "https://wit-ic-ufba.github.io"
+url                      : # "https://wit-ic-ufba.github.io"
 # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
